@startuml

package "data" {

    class Guide {
        -String title
        -String localHtml

        +String getLocalHtml()
        +String toString()
    }

    class Item {
        -SimpleBooleanProperty selected
        -String name
        -BigDecimal value
        -String serialNumber

        +SimpleBooleanProperty getSelected()
        +boolean getSelectedValue()
        +String getName()
        +BigDecimal getValue()
        +String getSerial()
        +void setSelected(boolean)
        +void setName(String)
        +void setValue(BigDecimal)
        +void setSerial(String)
    }

    class ItemList {
        -ObservableList<Item> items

        +void addItem(String, String, String)
        +void removeItems(List<Item>)
        +void clear()
        +void sortByName()
        +void inverseSortByName()
        +void sortByValue()
        +void inverseSortByValue()
        +void sortBySerial()
        +void inverseSortBySerial()
        +boolean searchItem(Item, String)
        +Predicate<Item> createPredicate(String)
        +ObservableList<Item> getObservableList()
        +List<Item> getList()
        +void setList(List<Item> newList)
    }

}

package "gui" {
    class AboutController {
        ..@FXML Variables..
        -ListView<Guide> guideList
        -WebView guideView
        ..Other Variables..
        -WebEngine engine
        -ObservableList<Guide> list
        --
        ..@FXML Methods..
        -void onCloseButtonClicked()
        +void initialize()
        ..Other Methods..
        +void loadPage()
    }

    class EditItemController {
        ..@FXML Variables..
        -Label nameCharCounter
        -TextField nameField
        -TextField serialField
        -Label titleLabel
        -TextField valueField
        ..Other Variables..
        -ItemList inventory
        -Item item
        -Validator validator
        -InventoryManagementApplicationController inventoryController
        --
        ..@FXML Methods..
        void deleteItemButtonClicked
        void editItemButtonClicked
        void onNameFieldFill
        void onSerialFieldFill
        void onValueFieldFill
        +void initialize()
        +Item getItem()
        +void setItem(Item)
        +void setInventoryController(InventoryManagementApplicationController)
    }

    class InventoryManagementApplication {
        +void start(Stage)
        +{static}void main()
    }

    class InventoryManagementApplicationController {
        ..@FXML Variables..
        -TitledPane fileTitledPane
        -VBox homeView
        -TableView<Item> itemTable
        -TitledPane itemTitledPane
        -VBox itemsView
        -TableColumn<Item, String> nameColumn
        -TextField nameField
        -Label nameLengthCounter
        -TextField searchField
        -TableColumn<Item, Boolean> selectedColumn
        -TableColumn<Item, String> serialColumn
        -TextField serialField
        -Accordion toolAccordion
        -TableColumn<Item, BigDecimal> valueColumn
        -TextField valueField
        ..Other Variables..
        -CheckBox selectAllBox
        -ItemList inventory
        -Validator validator
        -int sortNameCheck
        -int sortValueCheck
        -int sortSerialCheck
        --
        ..@FXML Methods..
        void aboutButtonClicked()
        void addItemButtonClicked()
        void clearItemButtonClicked()
        void clearSearchButtonClicked()
        void closeButtonClicked()
        void deleteItemButtonClicked()
        void editItemButtonClicked()
        void exportHTMLButtonClicked()
        void exportJSONButtonClicked()
        void exportTextButtonClicked()
        void homeButtonClicked()
        void importButtonClicked()
        void itemsButtonClicked()
        void sortNameButtonClicked()
        void sortSerialButtonClicked()
        void sortValueButtonClicked()
        +void initialize()
        ..Other Methods..
        -void editItemRowClicked(Item)
        -void initializeTable()
        -void initializeNameColumn()
        -void initializeSelectedColumn()
        -void initializeValueColumn()
        +void refreshTable()
        -void startEditScene()
    }
}

package "helper" {
    class FileHandler {
        -File path
        -List<Item> list

        +List<Item> fileImport()
        +List<Item> importText()
        +List<Item> importHTML()
        +List<Item> importJSON()
        +String fileExport()
        +String exportText()
        +String exportHTML()
        +String exportJSON()
        +void fileExportGUI(Stage, fileType)
    }

    class Validator {
        +String verifyName(String)
        +String verifyValue(String)
        +String verifySerial(String)
        +String verifyUnique(String, ObservableList<Item>)
    }
}

InventoryManagementApplication -- InventoryManagementApplicationController : < Initializes Main Stage
InventoryManagementApplicationController -- EditItemController : < Initializes Edit Item Stage
InventoryManagementApplicationController -- AboutController : < Initializes About Stage
InventoryManagementApplicationController o-- ItemList
InventoryManagementApplicationController o-- Validator
InventoryManagementApplicationController o-- FileHandler
EditItemController o-- Validator
EditItemController o-- Item
AboutController *-- Guide
ItemList *-- Item

note left of ItemList::items
    Contains many Items
end note

@enduml